[package]
name = "win32-frame"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.2.1"
raw-window-handle = "0.3"

[build-dependencies]
windows = "0.2.1"

[dev-dependencies]
winit = "0.24"